<resources>
    <string name="app_name" translatable="false">Sudoku Unleash</string>

    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login" translatable="false">Firebase + Twitter Login</string>
    <string name="desc_twitter_login" translatable="false">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword" translatable="false">Email/Password Authentication</string>
    <string name="desc_emailpassword" translatable="false">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth" translatable="false">Phone Number Authentication</string>
    <string name="desc_phone_auth" translatable="false">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth" translatable="false">Anonymous Authentication</string>
    <string name="desc_anonymous_auth" translatable="false">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth" translatable="false">Custom Authentication</string>
    <string name="desc_custom_auth" translatable="false">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui" translatable="false">FirebaseUI Auth</string>
    <string name="desc_firebase_ui" translatable="false">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id" translatable="false">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token" translatable="false">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth" translatable="false">Start</string>
    <string name="verify_phone_auth" translatable="false">Verify</string>
    <string name="resend_phone_auth" translatable="false">Resend</string>
    <string name="hint_phone_number" translatable="false">Phone Number</string>
    <string name="hint_verification_code" translatable="false">Verification Code</string>
    <string name="status_code_sent" translatable="false">Code Sent</string>
    <string name="status_verification_failed" translatable="false">Verification failed</string>
    <string name="status_verification_succeeded" translatable="false">Verification succeeded</string>
    <string name="status_sign_in_failed" translatable="false">Sign-in failed</string>
    <string name="instant_validation" translatable="false">(instant validation)</string>

    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>

    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="google_title_text" translatable="false">Google Sign In</string>

    <string name="facebook_status_fmt" translatable="false">Facebook User: %s</string>
    <string name="facebook_title_text" translatable="false">Facebook Login</string>

    <string name="emailpassword_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text" translatable="false">Email and Password</string>

    <string name="phone_title_text" translatable="false">Phone Number</string>

    <string name="twitter_status_fmt" translatable="false">Twitter User: %s</string>
    <string name="twitter_title_text" translatable="false">Twitter Login</string>

    <string name="firebaseui_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebaseui_title_text" translatable="false">FirebaseUI Auth</string>

    <string name="id_fmt" translatable="false">User ID: %s</string>
    <string name="email_fmt" translatable="false">Email: %s</string>
    <string name="new_game">New game</string>
    <string name="new_field">Change board</string>
    <string name="new_easy">Easy</string>
    <string name="new_medium">Medium</string>
    <string name="new_hard">Hard</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="rules">Rules</string>
    <string name="repeat_game">Restart game</string>
    <string name="history">History</string>
    <string name="personal">Personal</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="username">Username</string>
    <string name="time">Time</string>
    <string name="num_game">Number of Games:</string>
    <string name="win_game">Game wins:</string>
    <string name="best_time">Best time:</string>
    <string name="avg_time">Average time:</string>
    <string name="start_demo">Press play button to start demo</string>
    <string name="pen_info">\nUse it to set a value if you sure</string>
    <string name="pencil_info">\nUse it to set possible values</string>
    <string name="eraser_info">\nUse it to delete a value</string>
    <string name="hint_info">\nUse it only when you have no idea</string>
    <string name="undo_info">\nUse it to undo your previous choice</string>
    <string name="button_info">\nOhh I forget. Use this buttons to place values</string>
    <string name="new_game_but">Starting new game starts now\n</string>
    <string name="timer">This guy will count time which you spend on gaming\n</string>
    <string name="play_button">Use it to pause the game\n</string>
    <string name="settings_button">Some additional settings, rules and leaderboards\n</string>
    <string name="basic_pencil">Now we will set all possible values in the cells</string>
    <string name="set_pen">Place a first pen value. It will highlight each area, row and column</string>
    <string name="set_error">And what if we will place a wrong value? It will be highlighted</string>
    <string name="fix_error">So let\'s fix it fast</string>
    <string name="rest_game">Let\'s have a rest and enjoy rest of the game</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="watch_demo">Watch demo game</string>
    <string name="account_settings">Account</string>
    <string name="theme_settings">Theme</string>
    <string name="skip_login">Skip login</string>
    <string name="sign_on">On</string>
    <string name="sign_off">Off</string>
</resources>