<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menuSettings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuStatistics"
        android:orderInCategory="100"
        android:title="@string/statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuRules"
        android:orderInCategory="100"
        android:title="@string/rules"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuHistory"
        android:orderInCategory="100"
        android:title="@string/history"
        app:showAsAction="never" />
</menu>