<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <ToggleButton
        android:id="@+id/bool_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|center"
        android:textOff="@string/sign_off"
        android:textOn="@string/sign_on"/>
    <LinearLayout
        android:id="@+id/no_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:layout_margin="10dp"
            tools:visibility="gone" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:weightSum="4">
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/sign_out"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_settings"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <ToggleButton
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_margin="10dp"
        android:layout_gravity="left|center"
        android:textOff="@string/dark_theme"
        android:textOn="@string/light_theme"/>
</LinearLayout>