<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@android:drawable/list_selector_background"
    android:orientation="vertical"
    android:padding="0dp">

    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/new_game"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <Button
        android:id="@+id/new_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_field"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <Button
        android:id="@+id/new_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_easy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <Button
        android:id="@+id/new_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_medium"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <Button
        android:id="@+id/new_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_hard"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</LinearLayout>